syntax = "proto3";
package axelar.multisig.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/multisig/types";
option (gogoproto.goproto_getters_all) = false;

import "gogoproto/gogo.proto";
import "axelar/permission/exported/v1beta1/types.proto";

message StartKeygenRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;

  // Deprecated: This is the original "sender" field, but was originally
  // declared as a string, rather than a byte array.
  string sender_str = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    deprecated = true
  ];
  string key_id = 2 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];

  // New "sender" field, using the appropriate type
  bytes sender = 3 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message StartKeygenResponse {}

message SubmitPubKeyRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;

  // Deprecated: This is the original "sender" field, but was originally
  // declared as a string, rather than a byte array.
  string sender_str = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    deprecated = true
  ];
  string key_id = 2 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
  bytes pub_key = 3 [
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.PublicKey"
  ];
  bytes signature = 4 [ (gogoproto.casttype) = "Signature" ];

  // New "sender" field, using the appropriate type
  bytes sender = 5 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message SubmitPubKeyResponse {}

message SubmitSignatureRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;

  // Deprecated: This is the original "sender" field, but was originally
  // declared as a string, rather than a byte array.
  string sender_str = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    deprecated = true
  ];
  uint64 sig_id = 2 [ (gogoproto.customname) = "SigID" ];
  bytes signature = 3 [ (gogoproto.casttype) = "Signature" ];

  // New "sender" field, using the appropriate type
  bytes sender = 4 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message SubmitSignatureResponse {}

message RotateKeyRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;
  // Deprecated: This is the original "sender" field, but was originally
  // declared as a string, rather than a byte array.
  string sender_str = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    deprecated = true
  ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string key_id = 3 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];

  // New "sender" field, using the appropriate type
  bytes sender = 4 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message RotateKeyResponse {}

message KeygenOptOutRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;

  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message KeygenOptOutResponse {}

message KeygenOptInRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;

  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message KeygenOptInResponse {}
